[workspace]
resolver = "2"
members = ["projects/*"]
default-members = [
    "projects/web-demo",
]
exclude = [
    "projects/.DS_Store",
]

[workspace.dependencies]

[profile.release]
lto = true
panic = "abort"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
