[workspace]
resolver = "2"
members = ["projects/*"]
default-members = [
    "projects/web-demo",
]
exclude = [
    "projects/.DS_Store",
]

[workspace.dependencies.rcms]
version = "0.1.0"
path = "projects/rcms"


[profile.release]
lto = true
panic = "abort"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
