[package]
name = "rcms"
version = "0.1.0"
authors = ["cpsdqs <cpsdqs@gmail.com>"]
edition = "2018"
description = "ICC color management library"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/cpsdqs/rcms"
keywords = ["color", "icc"]
categories = ["graphics"]

[dependencies]
byteorder = "1.3"
time = { version = "0.3.37", features = ["wasm-bindgen"] }
cgmath = "0.18.0"
