[package]
name = "web-demo"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
anyhow = "1.0.95"
dioxus = { version = "0.6.2", features = ["web", "logger"] }
tracing = { version = "0.1.41", features = ["log"] }
image = "0.25.5"
base64 = "0.22.1"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
